--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(106, 155, 151)">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,25 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
-    </div>
+    </div> <!-- navbar-nav -->
+    </div> <!-- collapse navbar-collapse -->
+
+    <% if(username !== "undefined"){ %>
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <label style="margin-right: 10px;" for="longURL">Logged in as: <%= username %></label>
+          <button style="margin-left: 10px;" type="submit" class="btn btn-outline-light">Logout</button>
+        </div>
+      </form>
+      
+    <% } else{ %>  
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <input class="form-control" type="text" name="username" placeholder="enter your username..." style="width: 200px; margin: auto; margin-left: 10px; margin-right: 10px;">
+          <button type="submit" class="btn btn-outline-light">Login</button>
+        </div>
+      </form>
+   <% } %>
+
   </nav>
 </header>
