--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,16 +15,16 @@
 
       <form class="form-inline" action="/logout" method="POST">
         <div class="form-group mb-2">
-          <label style="margin-right: 10px;" for="longURL">Logged in as: <%= currentUser.email %></label>
+          <label style="margin-right: 10px;" for="loggout">Logged in as: <%= currentUser.email %></label>
           <button style="margin-left: 10px;" type="submit" class="btn btn-outline-light">Logout</button>
         </div>
       </form>
       
     <% } else { %>  
-      <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
-          <input class="form-control" type="text" name="username" placeholder="enter your username..." style="width: 200px; margin: auto; margin-left: 10px; margin-right: 10px;">
-          <button type="submit" class="btn btn-outline-light">Login</button>
+          <a href='/login'><button type="submit" class="btn btn-outline-dark"> Login </button></a>
+          <label> || </label>
+          <a href='/Register'><button type="submit" class="btn btn-outline-light"> Register </button></a>
         </div>
       </form>
    <% } %>
