--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(112, 168, 164)">
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(152, 176, 207)">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
 
       <form class="form-inline" action="/logout" method="POST">
         <div class="form-group mb-2">
-          <label style="margin-right: 10px;" for="loggout">Logged in as: <%= currentUser.email %></label>
+          <label style="margin-right: 10px;" for="logout">Logged in as: <%= currentUser.email %></label>
           <button style="margin-left: 10px;" type="submit" class="btn btn-outline-light">Logout</button>
         </div>
       </form>
