--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,7 +22,7 @@
           <div class="form-group mb-2" style="margin: auto">
             <label for="longURL">New URL:</label>
             <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-            <button type="submit" class="btn btn-outline-primary">Submit</button>
+            <button type="submit" class="btn btn-outline-info">Update</button>
           </div>
         </form>
       </p>
